# game-of-life

./: .clang-format  CMakeLists.txt  README.md  main.cpp  vcpkg.json
gof/: gof.hpp
src/: board.hpp  cell.cpp  cell.hpp  gof.cpp  gof.hpp
